--- a/doc/smp_utils.8
+++ b/doc/smp_utils.8
@@ -1,4 +1,4 @@
-.TH SMP_UTILS "8" "May 2011" "smp_utils\-0.96" SMP_UTILS
+.TH SMP_UTILS "8" "June 2011" "smp_utils\-0.96" SMP_UTILS
 .SH NAME
 smp_* \- invoke a Serial Attached SCSI Management (SMP) function
 .SH SYNOPSIS
@@ -9,8 +9,8 @@ smp_* \- invoke a Serial Attached SCSI Management (SMP) function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Serial Attached SCSI (SAS) is a transport (or interconnect) used by
-storage systems. A SAS system is made up of Host Bus Adapters (HBAs
+Serial Attached SCSI (SAS) is a transport (also known as a interconnect)
+used by storage systems. A SAS system is made up of Host Bus Adapters (HBAs
 typically containing SCSI initiators), disks (referred to in SCSI as
 both targets and logical units) and optionally some switching hardware
 called "expanders". Expanders are not SCSI devices so a new protocol was
@@ -22,68 +22,63 @@ request to a \fISMP_DEVICE\fR (a SMP target). Some utilities may invoke the
 same function more than once. If an error occurs then an error message is
 sent to stderr. If no error occurs, the response is decoded (the default),
 output in ASCII hex (when \fI\-\-hex\fR is given) or output in binary to
-stdout (when \fI\-\-raw\fR is given).
+stdout (when the \fI\-\-raw\fR option is given).
 .PP
 If \fISMP_DEVICE[,N]\fR is not given then the value in the environment
 variable SMP_UTILS_DEVICE is used.
 .SH INTERFACE
-Currently there are multiple interfaces that allow SMP functions to
-be passed through to a SMP target.
+Currently there are multiple interfaces that allow SMP functions to be passed
+through to a SMP target.
 .PP
 One method is to have a \fISMP_DEVICE\fR which is actually the SMP
-initiator (e.g. '/dev/mptctl,0'). In this case the SMP target's
-SAS address must be supplied with \fI\-\-sa=SAS_ADDR\fR.
+initiator (e.g. '/dev/mptctl,0'). In this case the SMP target's SAS address
+must be supplied with the \fI\-\-sa=SAS_ADDR\fR option.
 .PP
 Another method is to have a \fISMP_DEVICE\fR which represents the SMP target.
 In this case no \fISAS_ADDRESS\fR needs to be given (since it is implicit).
-This method may be simpler but it has some limitations (e.g. it assumes the
-SMP target has already been discovered which may not be the case for the
-initial discovery process).
 .PP
 Each utility in smp_utils attempts to work out which interface it has been
 given by examining the \fISMP_DEVICE\fR file. There are two interfaces
 supported currently:
 .TP
 \fBmpt\fR
-This specifies the MPT fusion SAS pass\-through which uses the '/dev/mptctl'
-or '/dev/mpt2ctl' device node. If mpt drivers are loaded but '/dev/mptctl'
-or '/dev/mpt2ctl' are not present then a 'modprobe mptctl' command may be
-needed in Linux. If there are multiple mpt fusion controllers (HBAs) in the
-computer, then the user will need to specify which one to use with the
-syntax: '/dev/mptctl,<n>' where <n> is the "ioc_num". This number can be found
-in the log where the mptsas driver is registered. In Linux it can be found
-in '/proc/scsi/mptsas/<host_no>' in the 2.4 series and additionally
-in '/sys/class/scsi_host/host<n>/unique_id' in the 2.6 series. When this
-interface is used the \fI\-\-sa=SAS_ADDR\fR option must be given to specify
-the SAS address of the SMP target. When the mptctl driver is loaded in
-Linux there should be a character device node at '/dev/mptctl' with
-major 10 and minor 220. Alternatively there may be a character device node
-at '/dev/mpt2ctl' with major 10 and minor 221.
+This specifies the MPT fusion SAS pass\-through. The mptsas driver uses
+the '/dev/mptctl' device node (character device major 10, minor 220) while
+the mpt2sas driver uses '/dev/mpt2ctl' device node (major 10, minor 221).
+The 'modprobe mptctl' or 'modprobe mpt2ctl' command may be needed. If there
+are multiple mpt fusion controllers (HBAs) in the computer, then the user
+will need to specify which one to use with the syntax: '/dev/mptctl,<n>'
+where <n> is the "ioc_num". This number can be found with dmesg after the
+mptsas driver is registered and appears as a suffix to the driver name (e.g.
+mpt2sas0). It can also be found in '/sys/class/scsi_host/host<n>/unique_id'.
+When this interface is used the \fI\-\-sa=SAS_ADDR\fR option must be given
+to specify the SAS address of the SMP target.
 .TP
 \fBsgv4\fR (\fBsg\fR)
-This interface is more generic and supported in the linux 2.6.24 kernel
-and above. The SMP functions are passed to the kernel using a format
-known as "SCSI Generic Version 4" which gives this interface its
-name: "sgv4" or just "sg". The SAS transport layer within the SCSI
-sub-system unpacks the SMP requests and forwards them to SAS low level
-drivers that support this interface. The \fISMP_DEVICE\fR is either a
-member of the '/sys/class/bsg' directory (e.g. /sys/class/bsg/expander\-6:0 )
-or a device node made for the bsg driver (e.g. /dev/bsg/expander\-6:0 ).
-Such device nodes are dynamic (i.e. they don't have a fixed
-major number) and should correspond to the major and minor numbers
-found in the 'sys/class/bsg/<smp_target_device>/dev' file.
+This interface is more generic and supported by several SAS HBA drivers
+including mptsas (and mpt2sas). It was introduced in the linux 2.6.24
+kernel. The SMP functions are passed to the kernel using a format known
+as "SCSI Generic Version 4" which gives this interface its name: "sgv4"
+or just "sg". The SAS transport layer within the SCSI sub-system unpacks
+the SMP requests and forwards them to SAS low level drivers that support
+this interface. The \fISMP_DEVICE\fR is either a member of
+the '/sys/class/bsg' directory (e.g. /sys/class/bsg/expander\-6:0 ) or a
+device node made for the bsg driver (e.g. /dev/bsg/expander\-6:0 ). Such
+device nodes are dynamic (i.e. they don't have fixed major and minor
+numbers) and should correspond to the major and minor numbers found in
+the 'sys/class/bsg/<smp_target_device>/dev' file.
 .SH ENVIRONMENT VARIABLES
 If the device name is not given then the SMP_UTILS_DEVICE environment
 variable is checked and if present its contents are used as the device name.
 .PP
-If the SAS address (of the SMP target) is not given and it is
-required (i.e. it is not implicit in the device name) then
-the SMP_UTILS_SAS_ADDR environment variable is checked and if present
-its contents are used as the SAS address. SAS addresses are usually given
-in hex indicated by a leading '0x' or trailing 'h'.
+If the SAS address (of the SMP target) is not given and it is required (i.e.
+it is not implicit in the device name) then the SMP_UTILS_SAS_ADDR
+environment variable is checked and if present its contents are used as the
+SAS address. SAS addresses are usually given in hex indicated by a
+leading '0x' or trailing 'h'.
 .PP
-In both cases command line options override the corresponding
-environment variable.
+In both cases command line options override the corresponding environment
+variable.
 .SH COMMON OPTIONS
 Mandatory arguments to long options are mandatory for short options as well.
 If an option takes a numeric argument then that argument is assumed to
@@ -144,12 +139,12 @@ indicate success (0) or failure (1 or more):
 success
 .TP
 .B 1 \- 63
-reserved for SMP function result codes. See SAS draft or standard,
-application layer, management application layer, SMP functions.
-Here are some common function result codes: 1 [unknown SMP function],
-2 [SMP function failed], 16 [phy does not exist], 17 [index does not
-exist], 18 [phy does not support SATA], 19 [unknown phy operation],
-22 [phy vacant] and 35 [zone lock violation].
+reserved for SMP function result codes. See the SAS\-2 (or later) draft,
+in the section on the application layer, drilling down further: management
+application layer then SMP functions. Here are some common function result
+codes: 1 [unknown SMP function], 2 [SMP function failed], 16 [phy does not
+exist], 17 [index does not exist], 18 [phy does not support SATA],
+19 [unknown phy operation], 22 [phy vacant] and 35 [zone lock violation].
 .TP
 .B 91
 syntax error. Either illegal options, options with bad arguments or
@@ -157,34 +152,33 @@ a combination of options that is not permitted.
 .TP
 .B 92
 the utility is unable to open, close or use the given \fISMP_DEVICE\fR.
-The given file name could be incorrect or there may be permission
+The given file name could be incorrect or there may be file permission
 problems. Adding the \fI\-\-verbose\fR option may give more information.
 .TP
 .B 97
 the response to a SMP function failed sanity checks.
 .TP
 .B 99
-any error that can't be categorized into values 1 to 97 may yield
-this value. This includes transport and operating system errors.
+any error that can't be categorized into values 1 to 97 may yield this value.
+This includes transport and operating system errors.
 .SH NOTES
 Finding the SAS address of an expander can be a challenge in some
-environments. An enclosure containing one or more expanders may
-have the expander SAS address(es) printed on the back of the
-device, a bit like ethernet MAC addresses.
+environments. An enclosure containing one or more expanders may have the
+expander SAS address(es) printed on the back of the device, a bit like
+ethernet MAC addresses.
 .PP
-In the Linux 2.6 kernel series the expander SAS address may well
-be in the sysfs tree but it is not always easy to find. Doing
-this search may help:
+In the Linux 2.6 kernel series the expander SAS address may well be in the
+sysfs tree but it is not always easy to find. Doing this search may help:
 .PP
   # find /sys \-name "*expander*"
 .PP
-That should show the suffix on any expanders that have been detected.
-Then a command like '/sys/class/sas_device/expander-6:0/sas_address'
-should show its SAS address.
+That should show the suffix on any expanders that have been detected. Then
+a command like 'cat /sys/class/sas_device/expander-6:0/sas_address' should
+show its SAS address.
 .PP
 Another approach is to work backwards from SCSI devices (i.e. logical
-units). The protocol specific port log page (log page 18h) contains
-fields for the "attached SAS address". sg_logs from the sg3_utils
+units). The protocol specific port log page (log page 18h) contains fields
+for the "attached SAS address". The sg_logs utility from the sg3_utils
 package could be used like this:
 .PP
   # sg_logs \-\-page=18h /dev/sdb
@@ -202,7 +196,7 @@ it has been split into two documents, the one of interest is called the SAS
 Protocol Layer (SPL) and  at the time of writing the most recent draft is
 spl\-r07.pdf (see section 9.4.3 for SMP functions). Technical work on SAS\-3
 has started with the SMP functions defined in the SPL\-2
-document (spl2r00.pdf). To avoid confusion, the multiple generations of SAS
+document (spl2r01.pdf). To avoid confusion, the multiple generations of SAS
 will be referred to in these man pages as SAS 1, 1.1, 2, 2.1 and 3 . Drafts,
 including those just prior to standardization can be found at the
 http://www.t10.org site. INCITS policy now requires a registration to view
@@ -216,11 +210,11 @@ In this section of each utility's man page is the first standard in which
 the associated SMP function appeared and whether there have been significant
 additions in later standards.
 .PP
-The COVERAGE file in the smp_utils source tarball shows the mapping between
-all SMP function names defined in the standards, the versions of those
-standards in which those SMP functions are defined and the corresponding
+The COVERAGE file in the smp_utils source tarball shows a table of all SMP
+function names defined in the drafts, the versions of those standards in
+which those SMP functions first appeared and the corresponding
 smp_utils utility names. A lot of extra SMP functions have been added in
-SAS\-2 and many do not have corresponding utilities at this time.
+SAS\-2 associated with zoning.
 .SH AUTHORS
 Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
@@ -231,4 +225,4 @@ Copyright \(co 2006\-2011 Douglas Gilbert
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .SH "SEE ALSO"
-.B sg_logs,sg_vpd(sg3_utils); sdparm(sdparm)
+.B sg_logs, sg_vpd(sg3_utils); sdparm(sdparm)
