--- a/doc/smp_rep_zone_perm_tbl.8
+++ b/doc/smp_rep_zone_perm_tbl.8
@@ -3,11 +3,11 @@
 smp_rep_zone_perm_tbl \- invoke REPORT ZONE PERMISSION TABLE function
 .SH SYNOPSIS
 .B smp_rep_zone_perm_tbl
-[\fI\-\-append\fR] [\fI\-\-help\fR] [\fI\-\-hex\fR]
+[\fI\-\-append\fR] [\fI\-\-bits=COL\fR] [\fI\-\-help\fR] [\fI\-\-hex\fR]
 [\fI\-\-interface=PARAMS\fR] [\fI\-\-multiple\fR] [\fI\-\-nocomma\fR]
 [\fI\-\-num=MD\fR] [\fI\-\-permf=FN\fR] [\fI\-\-raw\fR]
 [\fI\-\-report=RT\fR] [\fI\-\-sa=SAS_ADDR\fR] [\fI\-\-start=SS\fR]
-[\fI\-\-t10=BITS\fR] [\fI\-\-verbose\fR] [\fI\-\-version\fR]
+[\fI\-\-verbose\fR] [\fI\-\-version\fR]
 \fISMP_DEVICE[,N]\fR
 .SH DESCRIPTION
 .\" Add any additional description here
@@ -45,6 +45,16 @@ Mandatory arguments to long options are mandatory for short options as well.
 \fB\-a\fR, \fB\-\-append\fR
 used in conjunction with \fI\-\-permf=FN\fR to append to \fIFN\fR if it
 already exists. If \fIFN\fR does not exist then it is created.
+.TP
+\fB\-B\fR, \fB\-\-bits\fR=\fICOL\fR
+This is an alternate zone permission table represention showing single bits
+with the origin (i.e. ZP[0,0]) in the top left. The output is a bit array
+with \fICOL\fR columns and up to \fICOL\fR rows. This output resembles the
+example zone permission tables shown in the SAS draft documents (at t10.org).
+The default (i.e. without this option) is output that reflects the byte
+oriented, big endian nature of SCSI (and hence SMP) commands. The output
+produced by this option is not suitable as input for the
+smp_conf_zone_perm_tbl utility.
 .TP
 \fB\-f\fR, \fB\-\-start\fR=\fISS\fR
 starting (first and lowest numbered) source zone group (default: zone group
@@ -106,15 +116,6 @@ trailing 'h' on it.
 \fB\-f\fR, \fB\-\-start\fR=\fISS\fR
 See entry above, listed in order by its short option letter (i.e.
 \fI\-f\fR).
-.TP
-\fB\-T\fR, \fB\-\-t10\fR=\fIBITS\fR
-This is an alternate output respresention showing single bits with the
-origin (i.e. ZP[0,0]) in the top left. This follows the example zone
-permission tables shown in the SAS draft documents (at t10.org). Without this
-option the descriptors shown reflect the byte oriented, big endian nature of
-SCSI (and hence SMP) commands. A square array will be output with no more
-than \fIBITS\fR rows (and no more than \fIBITS\fR columns). The output using
-this option is not suitable as input for the smp_conf_zone_perm_tbl utility.
 .TP
 \fB\-v\fR, \fB\-\-verbose\fR
 increase the verbosity of the output. Can be used multiple times.
