--- a/doc/smp_discover.8
+++ b/doc/smp_discover.8
@@ -101,7 +101,7 @@ either prefix it with '0x' or put a trailing 'h' on it.
 \fB\-S\fR, \fB\-\-summary\fR
 output a multi line summary, with one line per active phy. Checks all
 phys (or less is \fI\-\-num=NUM\fR is given), starting at phy 0 (unless
-\fI\-\-phy=ID\fR is given). Equivalent to '--multiple --brief' ('-mb').
+\fI\-\-phy=ID\fR is given). Equivalent to '\-\-multiple \-\-brief' ('\-mb').
 See the section below on SINGLE LINE PER PHY FORMAT. If the
 \fI\-\-phy=ID\fR is not given then this option is assumed.
 .TP
