--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,8 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages.
 
-Changelog for smp_utils-0.97 [20110805] [svn:r101]
-  - change to .configure style build and use smputils
+Changelog for smp_utils-0.97 [20110806] [svn:r103]
+  - change to ./configure style build and use smputils
     runtime and development libraries
   - change binary install from /usr/bin to /usr/sbin
   - sync to SPL-2 (spl2r02)
@@ -11,6 +11,7 @@ Changelog for smp_utils-0.97 [20110805] [svn:r101]
     response length
   - smp_read_gpio, smp_write_gpio: move register type,
     index and count fields in enhanced variants
+  - add solaris and freebsd ports
 
 Changelog for smp_utils-0.96 [20110620] [svn:r96]
   - smp_conf_zone_perm_tbl, smp_conf_zone_man_pass
